--- a/stylesheet.qss
+++ b/stylesheet.qss
@@ -19,5 +19,5 @@ QFrame#fr_player2 > QLabel:hover, QFrame#fr_player1 > QLabel:hover{
     background: #008888;
 }
 QLineEdit{
-    background: yellow;
+    background: #56fc03;
 }
