--- a/stylesheet_main.qss
+++ b/stylesheet_main.qss
@@ -17,14 +17,23 @@ QFrame#fr_player2 > QLabel, QFrame#fr_player1 > QLabel{
     border-radius: 5px;
 }
 QLabel{
-    background: #008888;
+    background: #00161e;
 }
 QFrame#fr_player2 > QLabel:hover, QFrame#fr_player1 > QLabel:hover{
     background: #008888;
 }
 
+
 QLineEdit{
     background: #00161e;
     border: 2px solid #000;
     border-radius: 5px;
+}
+
+QPushButton{
+    border-radius: 5px;
+    background: #004444;
+}
+QPushButton:hover{
+    background: #005555;
 }
