--- a/mainWindow.ui
+++ b/mainWindow.ui
@@ -323,6 +323,34 @@
            </property>
           </widget>
          </item>
+         <item>
+          <widget class="QLabel" name="lb_outputField">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>60</height>
+            </size>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
         </layout>
        </widget>
       </item>
@@ -523,40 +551,7 @@
   </action>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>btn_Create_Player_1</sender>
-   <signal>clicked()</signal>
-   <receiver>MainWindow</receiver>
-   <slot>create_new_player()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>148</x>
-     <y>532</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>447</x>
-     <y>681</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>btn_Create_Player_2</sender>
-   <signal>clicked()</signal>
-   <receiver>MainWindow</receiver>
-   <slot>create_new_player()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>768</x>
-     <y>535</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>598</x>
-     <y>635</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
  <slots>
   <slot>c()</slot>
   <slot>create_new_player()</slot>
