--- a/mainWindow.ui
+++ b/mainWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>900</width>
-    <height>600</height>
+    <width>924</width>
+    <height>578</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -188,6 +188,13 @@
           </widget>
          </item>
          <item>
+          <widget class="QSlider" name="horizontalSlider">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QLabel" name="label_3">
            <property name="sizePolicy">
             <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
@@ -320,6 +327,20 @@
            </property>
            <property name="frameShadow">
             <enum>QFrame::Raised</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btn_qss_reload">
+           <property name="text">
+            <string>Reload, qss</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btn_qss_reload_weird">
+           <property name="text">
+            <string>Reload, weird</string>
            </property>
           </widget>
          </item>
@@ -482,6 +503,13 @@
           </widget>
          </item>
          <item>
+          <widget class="QSlider" name="horizontalSlider_2">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QLabel" name="label">
            <property name="sizePolicy">
             <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
@@ -551,7 +579,40 @@
   </action>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>btn_Create_Player_1</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>create_new_player()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>147</x>
+     <y>537</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>114</x>
+     <y>753</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btn_Create_Player_2</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>create_new_player()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>740</x>
+     <y>544</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>734</x>
+     <y>765</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
  <slots>
   <slot>c()</slot>
   <slot>create_new_player()</slot>
