--- a/stylesheet_addPlayer.qss
+++ b/stylesheet_addPlayer.qss
@@ -1,3 +1,7 @@
+QLabel{
+    font-size: 20px;
+    font: calibri;
+}
 QWidget{
 background: #00161e;
 color: white;
@@ -11,6 +15,8 @@ QLineEdit{
 }
 
 QPushButton{
+    font-size: 23px;
+    font: calibri;
     border-radius: 5px;
     background: #004444;
 }
