--- a/stylesheet_addPlayer_white.qss
+++ b/stylesheet_addPlayer_white.qss
@@ -1,3 +1,7 @@
+QLabel{
+    font-size: 20px;
+    font: calibri;
+}
 QWidget{
 background: #ffffff;
 color: dark;
@@ -12,6 +16,8 @@ QLineEdit{
 }
 
 QPushButton{
+    font-size: 23px;
+    font: calibri;
     border-radius: 5px;
     background: #ffffff;
 }
