--- a/mainWindow.ui
+++ b/mainWindow.ui
@@ -125,7 +125,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QLabel" name="label_4">
+          <widget class="QLabel" name="lb_Player1_budget">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
              <horstretch>0</horstretch>
@@ -447,7 +447,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QLabel" name="label_8">
+          <widget class="QLabel" name="lb_Player2_budget">
            <property name="sizePolicy">
             <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
              <horstretch>0</horstretch>
@@ -578,41 +578,16 @@
    </property>
   </action>
  </widget>
+ <tabstops>
+  <tabstop>horizontalSlider</tabstop>
+  <tabstop>horizontalSlider_2</tabstop>
+  <tabstop>btn_Create_Player_1</tabstop>
+  <tabstop>btn_Create_Player_2</tabstop>
+  <tabstop>btn_qss_reload</tabstop>
+  <tabstop>btn_qss_reload_weird</tabstop>
+ </tabstops>
  <resources/>
- <connections>
-  <connection>
-   <sender>btn_Create_Player_1</sender>
-   <signal>clicked()</signal>
-   <receiver>MainWindow</receiver>
-   <slot>create_new_player()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>147</x>
-     <y>537</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>114</x>
-     <y>753</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>btn_Create_Player_2</sender>
-   <signal>clicked()</signal>
-   <receiver>MainWindow</receiver>
-   <slot>create_new_player()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>740</x>
-     <y>544</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>734</x>
-     <y>765</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
  <slots>
   <slot>c()</slot>
   <slot>create_new_player()</slot>
