--- a/stylesheet_addPlayer.qss
+++ b/stylesheet_addPlayer.qss
@@ -24,9 +24,9 @@ QPushButton{
 QPushButton:hover{
     background: #005555;
 }
-QPushButton#btn_exitNewPlayer:hover{
+/* QPushButton#btn_exitNewPlayer:hover{
     background: #cc0000;
 }
 QPushButton#btn_commitNewPlayer:hover{
     background: #009900;
-}
+} */
